feat:Fix Desktop proguard warnings