@@ -27,11 +27,17 @@ compose.desktop {
             packageVersion = "1.0.0"
             includeAllModules = true
         }
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
     }
 }
 
 afterEvaluate {
     tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+
         if (System.getProperty("os.name").contains("Mac")) {
             jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
             jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
